--- a/index.html
+++ b/index.html
@@ -60,27 +60,26 @@
             </div>
             <!-- table section -->
             <div class="table-section mt-5">
-                <table class="table table-light">
+                <table class="table table-light table-hover w-100">
                     <!-- table heading -->
                     <thead>
                         <tr>
-                            <th class="table-title" scope="col">Name</th>
+                            <th class="table-title" scope="col" >Name</th>
                             <th class="table-title" scope="col">Date</th>
                             <th class="table-title" scope="col">Amount</th>
-                            <th class="table-title" scope="col">Time</th>
+                            <th class="table-title" scope="col" colspan="1">Time</th>
                         </tr>
                     </thead>
                     <!-- table body -->
                     <tbody class="table-body">
                         <tr class="table-row">
-                            <th scope="row">Chicken republic</th>
+                            <th scope="row" >Chicken republic</th>
                             <td>08/20/2024</td>
                             <td>NGN 1,000</td>
-                            <td>12:45 pm <span>
+                            <td colspan="1">12:45 pm <span>
                                 <!-- delete entry btn -->
-                                <!-- btn btn-sm btn-outline-danger ml-auto -->
                                     <button type="button" class=" btn btn-sm  del-btn">
-                                        <i class="fa-regular fa-trash-can"></i>
+                                        <i class="fa-solid fa-trash-can del-icon"></i>
                                     </button>
                                 </span>
                             </td>
@@ -89,7 +88,7 @@
 
                 </table>
                 <!-- clear btn -->
-                <div class="btn-contaner mt-5 d-flex align-items-center justify-content-center">
+                <div class="btn-contaner mt-3 d-flex align-items-center justify-content-center">
                     <button class=" clear-btn  btn btn-outline-danger col-10 col-md-3">Clear All</button>
                 </div>
             </div>
