added the display alert functionality

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <div>
                  <h1 class="display-3 text-center">Expense Tracker App</h1>
                  <h4 class="subtitle display-6 text-center text-success">Add a new item:</h4>
+                 <!-- alert -->
+                 <div class="alerts">
+                    <h6 class="alert"></h6>
+                 </div>
             </div>
             <!-- form section -->
             <div class="form-container container-md">
@@ -68,22 +72,23 @@
                             <th class="table-title" scope="col">Date</th>
                             <th class="table-title" scope="col">Amount</th>
                             <th class="table-title" scope="col" colspan="1">Time</th>
+                            <th class="table-title" scope="col" colspan="1"></th>
                         </tr>
                     </thead>
                     <!-- table body -->
                     <tbody class="table-body">
-                        <tr class="table-row">
+                        <!-- <tr class="table-row">
                             <th scope="row" >Chicken republic</th>
                             <td>08/20/2024</td>
                             <td>NGN 1,000</td>
-                            <td colspan="1">12:45 pm <span>
+                            <td colspan="1">12:45 pm <span> -->
                                 <!-- delete entry btn -->
-                                    <button type="button" class=" btn btn-sm  del-btn">
+                                    <!-- <button type="button" class=" btn btn-sm  del-btn">
                                         <i class="fa-solid fa-trash-can del-icon"></i>
                                     </button>
                                 </span>
                             </td>
-                        </tr>
+                        </tr> -->
                     </tbody>
 
                 </table>
