--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                  <h1 class="display-3 text-center">Expense Tracker App</h1>
                  <h4 class="subtitle display-6 text-center text-success">Add a new item:</h4>
                  <!-- alert -->
-                 <div class="alerts">
+                 <div class="alerts-container mt-2">
                     <h6 class="alert"></h6>
                  </div>
             </div>
@@ -77,23 +77,29 @@
                     </thead>
                     <!-- table body -->
                     <tbody class="table-body">
-                        <!-- <tr class="table-row">
-                            <th scope="row" >Chicken republic</th>
-                            <td>08/20/2024</td>
-                            <td>NGN 1,000</td>
-                            <td colspan="1">12:45 pm <span> -->
-                                <!-- delete entry btn -->
-                                    <!-- <button type="button" class=" btn btn-sm  del-btn">
-                                        <i class="fa-solid fa-trash-can del-icon"></i>
-                                    </button>
-                                </span>
-                            </td>
-                        </tr> -->
+                        <!-- placeholder row -->
+                        <tr class="table-row" id="placeholder-row">
+                            <th scope="row" >No expenses added yet!</th>
+                            <td></td>
+                            <td></td>
+                            <td colspan="1"></td>
+                            <td>
+                                <!-- <span> -->
+                               <!-- delete entry btn -->
+                                   <!-- <button type="button" class="btn btns btn-sm  del-btn">
+                                       <i class="fa-solid fa-trash-can del-icon"></i>
+                                   </button>
+                                   <button type="button" class=" btn btns btn-sm  edit-btn">
+                                       <i class="fa-solid fa-pen-to-square"></i>
+                                   </button> -->
+                               <!-- </span> -->
+                           </td>
+                        </tr>
                     </tbody>
 
                 </table>
                 <!-- clear btn -->
-                <div class="btn-contaner mt-3 d-flex align-items-center justify-content-center">
+                <div class="btn-contaner mt-2 mb-2 d-flex align-items-center justify-content-center">
                     <button class=" clear-btn  btn btn-outline-danger col-10 col-md-3">Clear All</button>
                 </div>
             </div>
