added fixed the clear list bug and added the functionality that adds PM or AM to the time based on the hour

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <tbody class="table-body">
                         <!-- placeholder row -->
                         <tr class="table-row" id="placeholder-row">
-                            <th scope="row" >No expenses added yet!</th>
+                            <th scope="row" class="placeholder-txt" >No expenses added yet!</th>
                             <td></td>
                             <td></td>
                             <td colspan="1"></td>
