added the edit item functionality

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <table class="table table-light table-hover w-100">
                     <!-- table heading -->
                     <thead>
-                        <tr>
+                        <tr class="table-success">
                             <th class="table-title" scope="col" >Name</th>
                             <th class="table-title" scope="col">Date</th>
                             <th class="table-title" scope="col">Amount</th>
