added the functionality to edit items in local storage

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                 </form>
             </div>
             <!-- table section -->
-            <div class="table-section mt-5">
-                <table class="table table-light table-hover w-100">
+            <div class="  table-section mt-5">
+                <table class="table table-responsive table-light table-hover w-100">
                     <!-- table heading -->
                     <thead>
                         <tr class="table-success">
