working on the total functionality

--- a/index.html
+++ b/index.html
@@ -96,7 +96,18 @@
                            </td>
                         </tr>
                     </tbody>
-
+                    <!-- table footer -->
+                    <!-- table body -->
+                    <tfoot class="table-footer">
+                        <!-- placeholder row -->
+                        <tr class="table-info">
+                            <th scope="row"></th>
+                            <td></td>
+                            <td></td>
+                            <td colspan="1"class="placeholder-txt">Total:</td>
+                            <td><span class="total pl-5">NGN 0.00</span></td>
+                        </tr>
+                    </tfoot>
                 </table>
                 <!-- clear btn -->
                 <div class="btn-contaner mt-2 mb-2 d-flex align-items-center justify-content-center">
