fixed issue with dynamically displaying the place holder row when the table is empty

--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
                     <!-- table body -->
                     <tbody class="table-body">
                         <!-- placeholder row -->
-                        <tr class="table-row" id="placeholder-row">
+                        <!-- <tr class="table-row" id="placeholder-row">
                             <th scope="row" class="placeholder-txt" >No expenses added yet!</th>
                             <td></td>
                             <td></td>
                             <td colspan="1"></td>
-                            <td>
+                            <td> -->
                                 <!-- <span> -->
                                <!-- delete entry btn -->
                                    <!-- <button type="button" class="btn btns btn-sm  del-btn">
@@ -93,8 +93,8 @@
                                        <i class="fa-solid fa-pen-to-square"></i>
                                    </button> -->
                                <!-- </span> -->
-                           </td>
-                        </tr>
+                           <!-- </td>
+                        </tr> -->
                     </tbody>
                     <!-- table footer -->
                     <!-- table body -->
