added functionality for when the cost of an item is changed, it should also be changed in local storage and the total of the items will also be updated to reflect the changes on the webpage

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <!-- amount input -->
                         <div class="form-group col-md-6 mt-3 mt-md-0">
                             <label class="form-label" for="amount">Amount:</label>
-                            <input type="text" id="amount" class="form-control " >
+                            <input type="text" id="amount" class="form-control"  placeholder ="eg.1,000">
                         </div>
                     </div>
                     <!-- add button -->
@@ -77,24 +77,9 @@
                     </thead>
                     <!-- table body -->
                     <tbody class="table-body">
+                        
                         <!-- placeholder row -->
-                        <!-- <tr class="table-row" id="placeholder-row">
-                            <th scope="row" class="placeholder-txt" >No expenses added yet!</th>
-                            <td></td>
-                            <td></td>
-                            <td colspan="1"></td>
-                            <td> -->
-                                <!-- <span> -->
-                               <!-- delete entry btn -->
-                                   <!-- <button type="button" class="btn btns btn-sm  del-btn">
-                                       <i class="fa-solid fa-trash-can del-icon"></i>
-                                   </button>
-                                   <button type="button" class=" btn btns btn-sm  edit-btn">
-                                       <i class="fa-solid fa-pen-to-square"></i>
-                                   </button> -->
-                               <!-- </span> -->
-                           <!-- </td>
-                        </tr> -->
+                       
                     </tbody>
                     <!-- table footer -->
                     <!-- table body -->
