css: increased font weight on total

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </form>
             </div>
             <!-- table section -->
-            <div class="  table-section mt-5">
+            <div class="table-section mt-5">
                 <table class="table table-responsive table-light table-hover w-100">
                     <!-- table heading -->
                     <thead>
@@ -89,8 +89,8 @@
                             <th scope="row"></th>
                             <td></td>
                             <td></td>
-                            <td colspan="1"class="placeholder-txt">Total:</td>
-                            <td><span class="total pl-5">NGN 0.00</span></td>
+                            <td colspan="1"class="placeholder-txt text-bold">Total:</td>
+                            <td><span class="total pl-5 text-bold">NGN 0.00</span></td>
                         </tr>
                     </tfoot>
                 </table>
