--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                     <div class="form-row row center-input">
                         <!-- form group form item purchased input -->
                         <div class="form-group mb-3">
-                            <label class="form-label" for="name">Name:</label>
-                            <input type="text" id="name" class="form-control " placeholder="Where was the expense made?">
+                            <label class="form-label" for="name">Expense:</label>
+                            <input type="text" id="name" class="form-control " placeholder="Expense description e.g food">
                         </div>
                     </div>
                     <!-- form group  for date and amount inputs-->
